src/ui/snapshots/sauva__ui__render__tests__search_empty_standard.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
┌ Search ──────────────────────────────────────────────────┐┌ Selection Preview ───────────────────┐
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌ Results ─────────────────────────────────────────────────┐│                                      │
│ Search by Unicode name, code point, or character         ││                                      │
│ Examples  rightwards arrow · U+2192 · →                  ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││              No preview              │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
 ↑/↓: Move  Enter: Inspect  Esc: Close  C-c: Quit  F1: Help
