src/ui/snapshots/sauva__ui__render__tests__search_name_results_minimum_with_scrolled_viewport.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
 sauva / Search                         97 results · U+21E5

 Search  rightwards arrow
────────────────────────────────────────────────────────────
 Results                                        97 results
    ↣   U+21A3    RIGHTWARDS ARROW WITH TAIL              ┃
    ↦   U+21A6    RIGHTWARDS ARROW FROM BAR
    ↪   U+21AA    RIGHTWARDS ARROW WITH HOOK
    ↬   U+21AC    RIGHTWARDS ARROW WITH LOOP
    ↴   U+21B4    RIGHTWARDS ARROW WITH CORNER DOWNWARDS
    ⇄   U+21C4    RIGHTWARDS ARROW OVER LEFTWARDS ARROW
    ⇥   U+21E5    RIGHTWARDS ARROW TO BAR
    ⇸   U+21F8    RIGHTWARDS ARROW WITH VERTICAL STROKE
    ⇻   U+21FB    RIGHTWARDS ARROW WITH DOUBLE VERTICAL ST

 ↑/↓ Move  Enter Inspect  Esc Close  C-c Quit       F1 Help
