src/ui/snapshots/sauva__ui__render__tests__search_name_results_standard.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
 sauva / Search                                                                 97 results · U+2192

 Search  rightwards arrow                                   │ Selection
─────────────────────────────────────────────────────────── │  Character        →
 Results                                        97 results  │  Code Point       U+2192
  →   U+2192    RIGHTWARDS ARROW                            ┃  Primary Name     RIGHTWARDS ARROW
  ↛   U+219B    RIGHTWARDS ARROW WITH STROKE                ┃  Block            Arrows
  ↣   U+21A3    RIGHTWARDS ARROW WITH TAIL                  ┃  General Category Sm — Math Symbol
  ↦   U+21A6    RIGHTWARDS ARROW FROM BAR                   ┃
  ↪   U+21AA    RIGHTWARDS ARROW WITH HOOK                  ┃
  ↬   U+21AC    RIGHTWARDS ARROW WITH LOOP                  │
  ↴   U+21B4    RIGHTWARDS ARROW WITH CORNER DOWNWARDS      │
  ⇄   U+21C4    RIGHTWARDS ARROW OVER LEFTWARDS ARROW       │ ─────────────────────────────────────
  ⇥   U+21E5    RIGHTWARDS ARROW TO BAR                     │ Glyph
  ⇸   U+21F8    RIGHTWARDS ARROW WITH VERTICAL STROKE       │
  ⇻   U+21FB    RIGHTWARDS ARROW WITH DOUBLE VERTICAL STRO  │
  ⤑   U+2911    RIGHTWARDS ARROW WITH DOTTED STEM           │
  ⤔   U+2914    RIGHTWARDS ARROW WITH TAIL WITH VERTICAL S  │
  ⤕   U+2915    RIGHTWARDS ARROW WITH TAIL WITH DOUBLE VER  │
  ⤚   U+291A    RIGHTWARDS ARROW-TAIL                       │
  ⤞   U+291E    RIGHTWARDS ARROW TO BLACK DIAMOND           │
  ⤠   U+2920    RIGHTWARDS ARROW FROM BAR TO BLACK DIAMOND  │
  ⥂   U+2942    RIGHTWARDS ARROW ABOVE SHORT LEFTWARDS ARR  │
  ⥅   U+2945    RIGHTWARDS ARROW WITH PLUS BELOW            │
  ⥇   U+2947    RIGHTWARDS ARROW THROUGH X                  │
  ⥴   U+2974    RIGHTWARDS ARROW ABOVE TILDE OPERATOR       │
  ⥵   U+2975    RIGHTWARDS ARROW ABOVE ALMOST EQUAL TO      │
  ⬎   U+2B0E    RIGHTWARDS ARROW WITH TIP DOWNWARDS         │

 ↑/↓ Move  Enter Inspect  Esc Close  C-c Quit                                               F1 Help
