src/ui/snapshots/sauva__ui__render__tests__search_no_results_standard.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
 sauva / Search                                                                           0 results

 Search  not a unicode name                                 │ Selection
─────────────────────────────────────────────────────────── │
 Results                                         0 results  │
  No matching characters                                    │
  Try another name or alias, code point, or character       │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │               No preview
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │
                                                            │

 ↑/↓ Move  Enter Inspect  Esc Close  C-c Quit                                               F1 Help
