src/ui/snapshots/sauva__ui__render__tests__search_special_wide.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
 sauva / Search                                                                                                           1 result · U+D800

 Search  U+D800                                                                                     │ Selection
─────────────────────────────────────────────────────────────────────────────────────────────────── │  Character        <SURROGATE>
 Results                                                                                  1 result  │  Code Point       U+D800
  ·   U+D800    <SURROGATE> — No Primary Name                                                       │  Primary Name     No Primary Name
                                                                                                    │  Block            High Surrogates
                                                                                                    │  General Category Cs — Surrogate
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │ ─────────────────────────────────────
                                                                                                    │ Glyph
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │
                                                                                                    │

 ↑/↓ Move  Enter Inspect  Esc Close  C-c Quit                                                                                       F1 Help
