src/ui/snapshots/sauva__ui__render__tests__sequence_minimum.snap
---
source: src/ui/render.rs
expression: "render_to_text(&state, width, height)"
---
 sauva / Sequence                              1/6 · U+0041

 Code Points                                 6 code points
    1  U+0041    A — LATIN CAPITAL LETTER A
    2  U+0301    ◌́ — COMBINING ACUTE ACCENT
    3  U+0020    <SPACE> — SPACE
    4  U+1F469   👩  — WOMAN
    5  U+200D    <DEFAULT IGNORABLE> — ZERO WIDTH JOINER
    6  U+1F4BB   💻  — PERSONAL COMPUTER






 k/j Move  g/G Ends  Enter Inspect  q Quit          F1 Help
